--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,6 +94,76 @@ button {
 }
 
 /* changing structure */
+.change-theme {
+  font-size: 1.25rem;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.change-theme:hover {
+  color: var(--first-color);
+}
+
+/* dark variables */
+body.dark-theme {
+  --first-color: hsl(30, 70%, 62%);
+  --second-color: hsl(25, 57%, 54%);
+  --title-color: hsl(30, 8%, 95%);
+  --text-color: hsl(30, 8%, 70%);
+  --border-color: hsl(30, 16%, 14%);
+  --body-color: hsl(30, 12%, 8%);
+  --container-color: hsl(30, 16%, 12%);
+}
+
+.dark-theme .nav__menu,
+.dark-theme .home__img,
+.dark-theme .popular__card:hover,
+.dark-theme .value__img,
+.dark-theme .accordion-open,
+.dark-theme .accordion-open .value__accordion-icon,
+.dark-theme .accordion-open .value__accordion-arrow,
+.dark-theme .contact__img,
+.dark-theme .contact__card-box:hover,
+.dark-theme .scrollup {
+  box-shadow: none;
+}
+
+.dark-theme .value__orbe,
+.dark-theme .value__accordion-icon,
+.dark-theme .value__accordion-arrow,
+.dark-theme .contact__orbe,
+.dark-theme .contact__card i,
+.dark-theme .contact__card-button,
+.dark-theme .subscribe__container {
+  background-color: var(--container-color);
+}
+
+.dark-theme .subscribe__container {
+  border: 6px solid var(--border-color);
+}
+
+.dark-theme .subscribe__description {
+  color: var(--text-color);
+}
+
+.dark-theme::-webkit-scrollbar {
+  background-color: hsl(228, 4%, 15%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb {
+  background-color: hsl(228, 4%, 25%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(228, 4%, 35%);
+}
+
+.container {
+  max-width: 1024px;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
 
 .grid {
   display: grid;
@@ -102,12 +172,26 @@ button {
 .section {
   padding: 4.5rem 0 2rem;
 }
+.section__title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 1rem;
+}
+
+.section__title span {
+  color: var(--second-color);
+}
+
+.section__subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+  color: var(--second-color);
+}
 
 .main {
   overflow: hidden;
 }
 
-/*=============== HEADER & NAV ===============*/
+/* header  */
 .header {
   position: fixed;
   top: 0;
@@ -142,6 +226,42 @@ nav {
   color: var(--first-color);
 }
 
+@media screen and (max-width: 1023px) {
+  .nav__menu {
+    position: fixed;
+    bottom: 2rem;
+    background-color: var(--container-color);
+    box-shadow: 0 8px 24px hsla(228, 66%, 45%, 0.15);
+    width: 90%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    padding: 1.3rem 3rem;
+    border-radius: 1.25rem;
+    transition: 0.4s;
+  }
+  .nav__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav__link {
+    color: var(--text-color);
+    display: flex;
+    padding: 0.5rem;
+    border-radius: 50%;
+  }
+
+  .nav__link i {
+    font-size: 1.25rem;
+  }
+
+  .nav__link span {
+    display: none;
+  }
+}
+
 /* Change background header */
 .scroll-header {
   background-color: var(--body-color);
@@ -163,73 +283,124 @@ nav {
   box-shadow: 0 4px 8px hsla(228, 66%, 45%, 0.25);
 }
 
-/*=============== THEME ===============*/
-.change-theme {
-  font-size: 1.25rem;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.3s;
+/* home */
+
+.home {
+  background: linear-gradient(170deg, hsl(0, 0%, 22%) 0%, hsl(0, 0%, 6%) 30%);
+  padding-bottom: 0;
 }
 
-.change-theme:hover {
+.home__container {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  row-gap: 3.5rem;
+}
+
+.home__title,
+.home__value-number {
+  color: #fff;
+}
+
+.home__title {
+  font-size: var(--biggest-font-size);
+  line-height: 120%;
+  margin-bottom: 1.25rem;
+}
+
+.home__description {
+  color: var(--text-color-light);
+  margin-bottom: 2rem;
+}
+
+.home__search {
+  background-color: var(--body-color);
+  padding: 0.35rem 0.35rem 0.35rem 0.75rem;
+  display: flex;
+  align-items: center;
+  border-radius: 0.75rem;
+  border: 3px solid var(--text-color-light);
+  margin-bottom: 2rem;
+}
+
+.home__search i {
+  font-size: 1.25rem;
   color: var(--first-color);
 }
 
-/* For large devices - Header responsive */
-@media screen and (min-width: 1023px) {
-  .nav {
-    height: calc(var(--header-height) + 1.5rem);
-  }
-
-  .nav__menu {
-    width: initial;
-    margin-left: auto;
-  }
-
-  .nav__list {
-    display: flex;
-    column-gap: 3rem;
-  }
-
-  .nav__link {
-    color: var(--text-color-light);
-  }
-
-  .nav__link i {
-    display: none;
-  }
-
-  .active-link {
-    background: none;
-    box-shadow: none;
-    color: var(--first-color);
-    font-weight: var(--font-medium);
-  }
-
-  .change-theme {
-    margin: 0 3rem;
-    color: var(--text-color-light);
-  }
-
-  .scroll-header .nav__link,
-  .scroll-header .change-theme {
-    color: var(--text-color);
-  }
-
-  .scroll-header .active-link {
-    color: var(--first-color);
-  }
+.home__search-input {
+  width: 90%;
+  background-color: var(--body-color);
+  color: var(--text-color);
+  margin: 0 0.5rem;
 }
 
-/* For medium devices */
-@media screen and (min-width: 576px) {
-  .nav__menu {
-    width: 342px;
-  }
+.home__search-input::placeholder {
+  color: var(--text-color-light);
 }
 
-@media screen and (max-width: 320px) {
-  .nav__menu {
-    padding: 1.3rem 1.5rem;
-  }
+.home__value {
+  display: flex;
+  column-gap: 2.5rem;
+}
+
+.home__value-number {
+  font-size: var(--h1-font-size);
+  font-weight: var(--font-medium);
+}
+
+.home__value-number span {
+  color: var(--second-color);
+}
+
+.home__value-description {
+  display: flex;
+  color: var(--text-color-light);
+  font-size: var(--smaller-font-size);
+}
+
+.home__images {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  bottom: -4rem;
+}
+
+.home__orbe {
+  width: 265px;
+  height: 284px;
+  background: linear-gradient(
+    180deg,
+    hsl(0, 0%, 16%) 93%,
+    hsl(0, 0%, 67%) 100%
+  );
+  border-radius: 135px 135px 0 0;
+}
+
+.home__img {
+  position: absolute;
+  width: 250px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 125px 125px 12px 12px;
+  display: inline-flex;
+  align-items: flex-end;
+  bottom: -1.5rem;
+  box-shadow: 0 16px 32px hsla(228, 66%, 25%, 0.25);
+}
+
+.button {
+  display: inline-block;
+  background: linear-gradient(101deg, hsl(30, 70%, 53%), hsl(30, 70%, 47%));
+  color: #fff;
+  padding: 14px;
+  border-radius: 0.5rem;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+  box-shadow: 0 4px 8px hsla(228, 66%, 45%, 0.25);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.button:hover {
+  box-shadow: 0 4px 12px hsla(228, 66%, 25%, 0.25);
 }
