--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -418,12 +418,12 @@ nav {
 
 .logos__img img {
   height: 60px;
-  opacity: .2;
-  transition: .3s;
+  opacity: 0.2;
+  transition: 0.3s;
 }
 
 .logos__img img:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 /*POPULAR*/
@@ -459,19 +459,16 @@ nav {
   color: var(--text-color);
   margin-bottom: 0.25rem;
   /* text-align: center; */
-
 }
 
 .popular__price span {
   color: var(--second-color);
-  
 }
 
 .popular__title {
   font-size: var(--h3-font-size);
   margin-bottom: 0.75rem;
   /* text-align: center; */
-
 }
 
 .popular__description {
@@ -480,7 +477,7 @@ nav {
 }
 
 .popular__card:hover {
-  box-shadow: 0 12px 16px hsla(228, 66%, 45%, .1);
+  box-shadow: 0 12px 16px hsla(228, 66%, 45%, 0.1);
 }
 
 /* Swiper class */
@@ -490,7 +487,7 @@ nav {
 
 .swiper-button-prev::after,
 .swiper-button-next::after {
-  content: '';
+  content: "";
 }
 
 .swiper-button-next,
@@ -502,7 +499,7 @@ nav {
   background-color: var(--container-color);
   border: 2px solid var(--text-color-light);
   padding: 6px;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   font-size: 1.5rem;
   color: var(--first-color);
 }
@@ -529,7 +526,11 @@ nav {
 .value__orbe {
   width: 266px;
   height: 316px;
-  background: linear-gradient(180deg, hsl(0, 0%, 16%) 93%, hsl(0, 0%, 67%) 100%);
+  background: linear-gradient(
+    180deg,
+    hsl(0, 0%, 16%) 93%,
+    hsl(0, 0%, 67%) 100%
+  );
   border-radius: 135px 135px 16px 16px;
 }
 
@@ -541,7 +542,7 @@ nav {
   border-radius: 125px 125px 12px 12px;
   inset: 0;
   margin: auto;
-  box-shadow: 0 16px 32px hsla(228, 66%, 25%, .25);
+  box-shadow: 0 16px 32px hsla(228, 66%, 25%, 0.25);
 }
 
 .value__description {
@@ -557,8 +558,8 @@ nav {
 .value__accordion-item {
   background-color: var(--body-color);
   border: 2px solid var(--border-color);
-  border-radius: .5rem;
-  padding: 1rem .75rem;
+  border-radius: 0.5rem;
+  padding: 1rem 0.75rem;
 }
 
 .value__accordion-header {
@@ -570,11 +571,11 @@ nav {
 .value__accordion-icon {
   background-color: var(--first-color-lighten);
   padding: 5px;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   font-size: 18px;
   color: var(--first-color);
-  margin-right: .75rem;
-  transition: .3s;
+  margin-right: 0.75rem;
+  transition: 0.3s;
 }
 
 .value__accordion-title {
@@ -584,16 +585,16 @@ nav {
 .value__accordion-arrow {
   display: inline-flex;
   background-color: var(--first-color-lighten);
-  padding: .25rem;
+  padding: 0.25rem;
   color: var(--first-color);
   border-radius: 2px;
   font-size: 10px;
   margin-left: auto;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .value__accordion-arrow i {
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .value__accordion-description {
@@ -608,16 +609,16 @@ nav {
 }
 
 .accordion-open {
-  box-shadow: 0 12px 32px hsla(228, 66%, 45%, .1);
-  transition: .4s;
+  box-shadow: 0 12px 32px hsla(228, 66%, 45%, 0.1);
+  transition: 0.4s;
 }
 
 .accordion-open .value__accordion-icon {
-  box-shadow: 0 4px 4px hsla(228, 66%, 45%, .1);
+  box-shadow: 0 4px 4px hsla(228, 66%, 45%, 0.1);
 }
 
 .accordion-open .value__accordion-arrow {
-  box-shadow: 0 2px 4px hsla(228, 66%, 45%, .1);
+  box-shadow: 0 2px 4px hsla(228, 66%, 45%, 0.1);
 }
 
 .accordion-open .value__accordion-arrow i {
@@ -639,7 +640,11 @@ nav {
 .contact__orbe {
   width: 266px;
   height: 316px;
-  background: linear-gradient(180deg, hsl(0, 0%, 16%) 93%, hsl(0, 0%, 67%) 100%);
+  background: linear-gradient(
+    180deg,
+    hsl(0, 0%, 16%) 93%,
+    hsl(0, 0%, 67%) 100%
+  );
   border-radius: 135px 135px 16px 16px;
 }
 
@@ -651,7 +656,7 @@ nav {
   border-radius: 125px 125px 12px 12px;
   inset: 0;
   margin: auto;
-  box-shadow: 0 16px 32px hsla(228, 66%, 25%, .25);
+  box-shadow: 0 16px 32px hsla(228, 66%, 25%, 0.25);
 }
 
 .contact__description {
@@ -662,21 +667,21 @@ nav {
 .contact__card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1.25rem .75rem;
+  gap: 1.25rem 0.75rem;
 }
 
 .contact__card-box {
   background-color: var(--body-color);
   border: 2px solid var(--border-color);
-  padding: 1.25rem .75rem;
-  border-radius: .5rem;
-  transition: .3s;
+  padding: 1.25rem 0.75rem;
+  border-radius: 0.5rem;
+  transition: 0.3s;
 }
 
 .contact__card-info {
   display: flex;
   align-items: flex-start;
-  column-gap: .75rem;
+  column-gap: 0.75rem;
   margin-bottom: 1.25rem;
 }
 
@@ -700,12 +705,12 @@ nav {
   font-size: var(--small-font-size);
   padding: 14px 0;
   width: 100%;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   background: var(--first-color-lighten);
   color: var(--first-color);
   font-weight: var(--font-semi-bold);
   box-shadow: none;
-  transition: all .4s ease;
+  transition: all 0.4s ease;
 }
 
 .contact__card-button:hover {
@@ -714,7 +719,7 @@ nav {
 }
 
 .contact__card-box:hover {
-  box-shadow: 0 8px 24px hsla(228, 66%, 45%, .1);
+  box-shadow: 0 8px 24px hsla(228, 66%, 45%, 0.1);
 }
 
 /*SUBSCRIBE*/
@@ -763,8 +768,8 @@ nav {
   font-weight: var(--font-semi-bold);
   display: inline-flex;
   align-items: center;
-  column-gap: .25rem;
-  margin-bottom: .75rem;
+  column-gap: 0.25rem;
+  margin-bottom: 0.75rem;
 }
 
 .footer__logo i {
@@ -794,12 +799,12 @@ nav {
 }
 
 .footer__links {
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 }
 
 .footer__link {
   color: var(--text-color);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .footer__link:hover {
@@ -824,7 +829,7 @@ nav {
 .footer__social-link {
   font-size: 1.75rem;
   color: var(--text-color);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .footer__social-link:hover {
@@ -854,4 +859,179 @@ nav {
 .footer__privacy {
   justify-content: center;
   column-gap: 1.25rem;
+}
+
+/* scroll bar */
+::-webkit-scrollbar {
+  width: 0.6rem;
+  border-radius: 0.5rem;
+  background-color: hsl(228, 8%, 76%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(228, 8%, 64%);
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(228, 8%, 54%);
+  border-radius: 0.5rem;
+}
+
+/* SCROLL UP */
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -30%;
+  background-color: var(--container-color);
+  box-shadow: 0 8px 12px hsla(228, 66%, 45%, 0.1);
+  display: inline-flex;
+  padding: 0.35rem;
+  border-radius: 0.25rem;
+  color: var(--title-color);
+  font-size: 1.25rem;
+  z-index: var(--z-tooltip);
+  transition: 0.3s;
+}
+
+.scrollup:hover {
+  transform: translateY(-0.25rem);
+  color: var(--first-color);
+}
+
+/* Show Scroll Up*/
+.show-scroll {
+  bottom: 8rem;
+}
+
+/* small devices  */
+@media screen and (max-width: 350px) {
+  .container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .section {
+    padding: 3.5rem 0 1rem;
+  }
+
+  .home {
+    padding-bottom: 0;
+  }
+
+  .contact__card {
+    grid-template-columns: repeat(1, 180px);
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .nav__menu {
+    padding: 1.3rem 1.5rem;
+  }
+
+  .home__value {
+    column-gap: 1rem;
+  }
+
+  .home__img {
+    width: 220px;
+    height: 280px;
+  }
+
+  .home__orbe {
+    width: 240px;
+    height: 264px;
+  }
+
+  .logos__container {
+    gap: 2rem 1rem;
+  }
+
+  .popular__card {
+    width: 230px;
+    padding: 0.5rem 0.5rem 0.75rem;
+  }
+
+  .value__img {
+    width: 220px;
+    height: 260px;
+  }
+
+  .value__orbe,
+  .contact__orbe {
+    width: 236px;
+    height: 280px;
+  }
+
+  .subscribe__container {
+    padding: 2rem 1rem;
+  }
+
+  .footer__content {
+    gap: 1rem;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .nav__menu {
+    width: 342px;
+  }
+
+  .home__search {
+    width: 412px;
+  }
+
+  .contact__card {
+    grid-template-columns: repeat(2, 192px);
+    justify-content: center;
+  }
+
+  .footer__content {
+    grid-template-columns: repeat(3, max-content);
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .home__container {
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 2rem;
+  }
+
+  .home__orbe {
+    align-self: flex-end;
+  }
+
+  .home__data {
+    padding-bottom: 2rem;
+  }
+
+  .logos__container {
+    padding-top: 1rem;
+    grid-template-columns: repeat(4, max-content);
+    justify-content: center;
+  }
+
+  .value__container,
+  .contact__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+  }
+
+  .contact__images {
+    order: 1;
+  }
+
+  .contact__card {
+    justify-content: initial;
+  }
+
+  .subscribe__container {
+    padding: 3rem 13rem;
+  }
+
+  .footer__container {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+  }
 }
